changed idea to shoe wish list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <!-- Start of Home Page -->
     <div data-role="page" id="home">
         <div data-role="header" data-theme="a">
-            <h1> My Shoes </h1>
+            <h1> Shoe Wish List </h1>
            
             <div data-role="navbar" data-theme="b">
                 <ul>
@@ -33,10 +33,7 @@
         <div data-role="content">
             <div id = "purpose">
                 <h2> Purpose of This Website</h2>
-                <ul>
-                    <li>Add Shoes To a List</li>
-                    <li>Able to See Shoes You Have Listed</li>
-                </ul>
+                <p> This website will help you track the future shoes that you want! You will be asked to enter basic information about the shoe, and you will be able to sort shoes by release date and price! Have fun</p>
             </div>
         </div>
 
